
Package: R.utils
================

Version: 1.25.0 [2013-06-27]
o UPDATE: Now gzip()/gunzip() returns the output file (was number
  of output bytes processed which are now returned as an attribute).
o Added isGzipped() for testing whether a file is gzipped or not.


Version: 1.24.4 [2013-06-17]
o Now argument 'dims' of extract() can also be dimension names.


Version: 1.24.3 [2013-05-25]
o Minor speedups by replacing rm() calls with NULL assignments.
o SPEEDUP: readTable() no longer calls gc().


Version: 1.24.2 [2013-05-20]
o CRAN POLICY: Now all Rd \usage{} lines are at most 90 characters long.
o CRAN POLICY: Now all Rd example lines are at most 100 characters long.


Version: 1.24.1 [2013-05-13]
o The workaround needed by isDirectory() due to a bug in
  file.info() is now applied only for R (< 3.0.2), since the
  bug was been fixed in R 3.0.1 patched (PR#15302).


Version: 1.24.0 [2013-04-18]
o Several methods are now output messages and verbose output
  to standard error (instead of standard output), including
  addFinalizerToLast(), filePath(), patchCode(), readWindowsShellLink(),
  readWindowsShortcut(), and loadAnywhere() for Settings.


Version: 1.23.4 [2013-04-15]
o BUG FIX: capitalize()/decapitalize() would return "NANA" for
  missing values.  Reported by Liviu Andronic.


Version: 1.23.3 [2013-03-29]
o BUG FIX: downloadFile('https://...') did not work if 'username'
  or 'password' was NULL.


Version: 1.23.2 [2013-03-22]
o BUG FIX: Previous update caused commandArgs(..., adhoc=TRUE)
  to coerce 'T' and 'F' to logicals TRUE and FALSE.  They are
  now preserved as character string.


Version: 1.23.1 [2013-03-21]
o Now commandArgs(..., adhoc=TRUE) utilizes utils::type.convert().


Version: 1.23.0 [2013-03-20]
o Added ecget() which is like eget() with the default value
  corresponding to the command-line argument.
o Added eget() for retrieving a single variable, with a
  fallback to a default value, e.g. n <- eget(n=42).